<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".fragments.AddEmployeeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/username"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/state_color"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/age"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/state_color"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLength="2"
            android:inputType="number"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/address"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/state_color"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:layout_editor_absoluteX="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/city"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/state_color"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:hintTextColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:layout_editor_absoluteX="14dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/pink"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

</androidx.constraintlayout.widget.ConstraintLayout>